--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -110,3 +110,12 @@ input {
   margin: 5px;
   margin-bottom: 10px;
 }
+
+
+/* --------------------------------------------------------------------------------
+85% West Fargo Students Display
+-------------------------------------------------------------------------------- */
+
+.hide85True {
+  display: none;
+}
