--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -78,3 +78,83 @@ Grid
   flex-basis: 100%;
   max-width: 100%;
 }
+
+
+
+.e75 {
+  background-color: #85bb65;
+  color: #36454F !important;
+}
+
+.e50 {
+  background-color: #84bb65ce;
+  color: #36454F !important;
+}
+
+.e25 {
+  background-color: #84bb659a;
+  color: #36454F !important;
+}
+
+.e0 {
+  background-color: #84bb6567;
+  color: #36454F !important;
+}
+
+.ez {
+  background-color: rgba(87, 87, 87, 0.543);
+  color: black !important;
+}
+
+.en {
+  background-color: rgba(233, 18, 18, 0.876);
+  color: black !important;
+}
+
+.envelope {
+  border: black solid 1px;
+  margin-top: 2vh !important;
+  width: 100%;
+  height: auto;
+  min-height: 100%;
+  padding: 10px;
+  margin: 2vh 1vw;
+  border-radius: 9px;
+  box-shadow: 5px 5px 6px 3px rgba(70, 67, 67, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.envelope:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.envelope-container {
+  overflow: hidden;
+}
+
+th {
+  padding: 2vh !important;
+}
+
+#rab {
+  padding: 0px;
+  vertical-align: center;
+}
+
+#rab:hover {
+  cursor: pointer;
+}
+
+table {
+  margin-top: 2vh !important;
+  box-shadow: 5px 5px 6px 3px rgba(70, 67, 67, 0.7);
+}
+
+button {
+  border: none;
+  background-color: #36454f00;
+}
